log
vie 21 abr 2023 09:57:42 -04: 
 tests:  1|8
total_score: 0/70
03d2eb4
vie 21 abr 2023 10:10:35 -04: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
03d2eb4
vie 21 abr 2023 10:24:13 -04: 
 treemap.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:13: error: implicit declaration of function ‘is_lower’ [-Werror=implicit-function-declaration]
   64 |         if (is_lower(tree->current->pair,key))
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7fbcf7
vie 21 abr 2023 10:24:39 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   64 |         if (lower_than(tree->current->pair,key))
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3085eb
vie 21 abr 2023 10:25:07 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4694aff
vie 21 abr 2023 10:32:48 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0acfdca
vie 21 abr 2023 10:34:42 -04: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:40: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   63 |         if (is_equal(tree,auxkey,key)) return ;
      |                                        ^~~~~~
treemap.c:51:8: note: declared here
   51 | Pair * searchTreeMap(TreeMap * tree, void* key) {
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1223ab5
vie 21 abr 2023 10:34:54 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
892f754
vie 21 abr 2023 10:35:48 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b575c1
vie 21 abr 2023 10:36:36 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3df2ac9
vie 21 abr 2023 10:37:45 -04: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1886366
vie 21 abr 2023 10:40:21 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4caa4a4
vie 21 abr 2023 10:41:51 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
25296ad
vie 21 abr 2023 10:43:50 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f960ae3
vie 21 abr 2023 10:46:20 -04: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|7
total_score: 5/70
8bb676b
vie 21 abr 2023 10:48:25 -04: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
bceca74
vie 21 abr 2023 11:02:32 -04: 
 treemap.c | 32 +++++++++++++++++++++++++++++---
 1 file changed, 29 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:104:9: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
  104 |     if (lower_than((tree->current)->pair->key,key))
      |         ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8fc13d6
vie 21 abr 2023 11:02:49 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ccbccc
vie 21 abr 2023 11:04:08 -04: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  11|6
total_score: 15/70
66424ff
vie 21 abr 2023 11:06:25 -04: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
c5c07d7
vie 21 abr 2023 11:07:46 -04: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
06754c6
vie 21 abr 2023 11:10:34 -04: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
337c2ad
vie 21 abr 2023 11:13:18 -04: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  10|6
total_score: 15/70
ac11230
vie 21 abr 2023 11:14:59 -04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:87:57: error: comparison between pointer and integer [-Werror]
   87 |     while ((tree->current->right == tree->current->left)!=NULL)
      |                                                         ^~
cc1: all warnings being treated as errors
Compilation failed
7d05b7b
vie 21 abr 2023 14:39:07 -04: 
 treemap.c | 53 +++++++++++++++++++++++++++++++++--------------------
 1 file changed, 33 insertions(+), 20 deletions(-)
 tests:  12|6
total_score: 15/70
d68c2c9
vie 21 abr 2023 14:40:20 -04: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
d63984a
vie 21 abr 2023 14:42:39 -04: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
4b1a64e
vie 21 abr 2023 15:29:02 -04: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:176:23: error: unused variable ‘child’ [-Werror=unused-variable]
  176 |             TreeNode* child = (childDirection = 1) ? node->left: node->right;
      |                       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
59aec1d
